--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,9 @@
       Billets <span class="caret"></span>
     </a>
     <ul class="dropdown-menu">
-        <li><a href="menu.html#ours1">Flat Design et Graphisme</a></li>
-          <li><a href="menu.html#ours2">Flat Design et Paysage</a></li>
-          <li><a href="menu.html#ours3">Flat Design et Technologie</a></li>
+         <li><a href="menu.html#ours1">Origine</a></li>
+          <li><a href="menu.html#ours2">Utilisation</a></li>
+          <li><a href="menu.html#ours3">Choix</a></li>
     </ul>
   </li>
 
@@ -75,7 +75,6 @@
             <strong>Ce Blog</strong> est un essai <em>n'hésitez pas à me poser des questions.</em>
             Je suis également intéressé par l'<abbr title="Expérience Utilisateur">UX</abbr> Design qui fera l'objet d'un prochain blog.
           </p>
-          <p>Je vous laisse sur les propos tenu par Steve Jobs en 2005 à Stanford</p>
             <blockquote>
              “ Soyez insatiables. Soyez fous. ”
 <br>
